ProyectoUnico/Analizadores/parser.output
Terminals unused in grammar

   notificar
   puntoComa
   nonassoc


Grammar

    0 $accept: INICIO $end

    1 INICIO: LISTA_INCLU CLASES
    2       | CLASES

    3 LISTA_INCLU: LISTA_INCLU START_INCLUIR
    4            | START_INCLUIR

    5 CLASES: CLASES CLASE
    6       | CLASE

    7 CLASE: clase Id EXTENDER LISTA_SENTENCIA llaveC

    8 EXTENDER: extender HERENCIA llaveA
    9         | llaveA

   10 HERENCIA: HERENCIA coma Id
   11         | Id

   12 LISTA_SENTENCIA: LISTA_SENTENCIA CUERPO_CLASE
   13                | CUERPO_CLASE

   14 CUERPO_CLASE: VAR_GLOBALES
   15             | METODO_FUNCION
   16             | VISIBILIDAD VAR_GLOBALES
   17             | DECLARAR_OBJEC
   18             | VISIBILIDAD DECLARAR_OBJEC
   19             | DECLAR_ARREGLO
   20             | VISIBILIDAD DECLAR_ARREGLO
   21             | PRINCIPAL

   22 VISIBILIDAD: publico
   23            | privado
   24            | protegido

   25 VAR_GLOBALES: TIPO_DATO ASIGNACION

   26 TIPO_DATO: PRIMITIVO DEC_ID

   27 DEC_ID: DEC_ID coma Id
   28       | Id

   29 ASIGNACION: igual E final
   30           | final

   31 ASIGNAR_VAR: Id igual E final

   32 E: E suma E
   33  | E resta E
   34  | E multiplicacion E
   35  | E division E
   36  | E potencia E
   37  | E Or E
   38  | E And E
   39  | E Nand E
   40  | E Nor E
   41  | E comparar E
   42  | E diferencia E
   43  | E menorQ E
   44  | E menorIgual E
   45  | E mayorQ E
   46  | E mayorIgual E
   47  | VERIFICAR_CUENTA
   48  | IMPRI_CUENTA
   49  | CONSUL_CUENTA
   50  | Id
   51  | POR_ARREGLO
   52  | LLAMADA
   53  | Not E
   54  | IN_BOOL
   55  | cha
   56  | str
   57  | decimal
   58  | numero
   59  | resta E
   60  | parA E parC

   61 IN_BOOL: verdadero
   62        | falso

   63 DECLARAR_OBJEC: Id Id igual nuevo Id parA parC final
   64               | Id Id final

   65 DECLAR_ARREGLO: arreglo TIPO_DATO DIMENSION

   66 DIMENSION: DIMENSION1 TERMI1
   67          | DIMENSION2 TERMI2
   68          | DIMENSION3 TERMI3

   69 DIMENSION1: corA E corC

   70 DIMENSION2: corA E corC corA E corC

   71 DIMENSION3: corA E corC corA E corC corA E corC

   72 TERMI1: final
   73       | igual ARRAY1 final

   74 ARRAY1: llaveA LISTA_NORMAL llaveC

   75 LISTA_NORMAL: LISTA_NORMAL coma E
   76             | E

   77 TERMI2: final
   78       | igual llaveA LISTA2 llaveC final

   79 LISTA2: LISTA2 coma ARRAY1
   80       | ARRAY1

   81 TERMI3: final
   82       | igual llaveA LISTA3 llaveC final

   83 LISTA3: LISTA3 coma llaveA LISTA2 llaveC
   84       | llaveA LISTA2 llaveC

   85 POR_ARREGLO: Id DIMENSION1
   86            | Id DIMENSION2
   87            | Id DIMENSION3

   88 REASIGNAR_ARREGLO: POR_ARREGLO igual E final

   89 START_SI: si parA E parC llaveA LISTA_GENERAL OTRO_SI

   90 OTRO_SI: llaveC SINO_SI
   91        | llaveC SINO_SI SINO
   92        | llaveC SINO
   93        | llaveC

   94 SINO_SI: SINO_SI SinoSi parA E parC llaveA LISTA_GENERAL llaveC
   95        | SinoSi parA E parC llaveA LISTA_GENERAL llaveC

   96 SINO: sino llaveA LISTA_GENERAL llaveC

   97 START_PARA: para parA INICIAR E final ACTUALIZAR parC CUERPO_PARA

   98 ACTUALIZAR: Id suma suma
   99           | Id resta resta

  100 INICIAR: VAR_GLOBALES
  101        | ASIGNAR_VAR

  102 CUERPO_PARA: llaveA LISTA_GENERAL llaveC

  103 START_REPETIR: repetir parA E parC llaveA LISTA_GENERAL llaveC

  104 START_MIENTRAS: mientras parA E parC llaveA LISTA_GENERAL llaveC

  105 START_HACER: hacer llaveA LISTA_GENERAL llaveC mientras parA E parC final

  106 START_COMPROBAR: comprobar parA E parC llaveA CUERPO_COMPRO llaveC

  107 CUERPO_COMPRO: LISTA_CASO DEFAU
  108              | LISTA_CASO
  109              | DEFAU

  110 DEFAU: defecto dosPunto LISTA_GENERAL salir final

  111 LISTA_CASO: LISTA_CASO caso E dosPunto LISTA_GENERAL salir final
  112           | caso E dosPunto LISTA_GENERAL salir final

  113 START_INCLUIR: incluir parA str parC final

  114 START_IMPRIMIR: imprimir parA E parC final

  115 SENTENCIA_ARCHIVOS: ARCH
  116                   | NUEVO_CONJUNTO
  117                   | NUEVO_REGEX
  118                   | NUEVA_ENTRADA
  119                   | GUARDAR

  120 ARCH: archivo Id igual crearDer parA E parC final

  121 NUEVO_CONJUNTO: Id punto crearConjunto parA E coma E parC final

  122 NUEVO_REGEX: Id punto crearRegex parA E coma E parC final

  123 NUEVA_ENTRADA: Id punto crearEntrada parA E coma E parC final

  124 GUARDAR: Id punto guardarA parA parC final

  125 SENTENCIA_CUENTA: CREAR_CUENTA
  126                 | VERIFICAR_CUENTA
  127                 | DEP_CUENTA
  128                 | RESTA_CUENTA
  129                 | IMPRI_CUENTA
  130                 | CONSUL_CUENTA
  131                 | TRANFERIR

  132 CREAR_CUENTA: cuenta Id igual crearC parA E coma E parC final

  133 VERIFICAR_CUENTA: Id punto verCuenta parA parC final

  134 DEP_CUENTA: Id punto depCuenta parA E parC final

  135 RESTA_CUENTA: Id punto resCuenta parA E parC final

  136 IMPRI_CUENTA: Id punto imprimirCuenta parA parC final

  137 CONSUL_CUENTA: Id punto conCuenta parA parC final

  138 TRANFERIR: transferir parA Id coma Id coma E parC final

  139 LISTA_GENERAL: LISTA_GENERAL SENTENCIA_GENERAL
  140              | SENTENCIA_GENERAL

  141 SENTENCIA_GENERAL: VAR_GLOBALES
  142                  | DECLARAR_OBJEC
  143                  | NUEVO_OBJEC
  144                  | DECLAR_ARREGLO
  145                  | REASIGNAR_ARREGLO
  146                  | ASIGNAR_VAR
  147                  | ACTUALIZAR final
  148                  | START_SI
  149                  | START_HACER
  150                  | START_MIENTRAS
  151                  | START_PARA
  152                  | START_REPETIR
  153                  | START_COMPROBAR
  154                  | START_IMPRIMIR
  155                  | SENTENCIA_ARCHIVOS
  156                  | SENTENCIA_CUENTA
  157                  | RETORNO final
  158                  | LLAMADA
  159                  | romper final
  160                  | continuar final

  161 NUEVO_OBJEC: Id igual nuevo Id parA parC final

  162 RETORNO: Retornar E

  163 METODO_FUNCION: funcion sobrescribir VISIBILIDAD TIPO_F Id PARAMETROS CUERPO_MF
  164               | funcion VISIBILIDAD TIPO_F Id PARAMETROS CUERPO_MF
  165               | funcion sobrescribir TIPO_F Id PARAMETROS CUERPO_MF
  166               | funcion TIPO_F Id PARAMETROS CUERPO_MF

  167 CUERPO_MF: llaveA LISTA_GENERAL llaveC

  168 FUNCION_PARAMETRO: PRIMITIVO Id
  169                  | arreglo PRIMITIVO Id DIMENSION_N
  170                  | Id Id

  171 PARAMETROS: parA LISTA_PARAMETROS parC
  172           | parA parC

  173 LISTA_PARAMETROS: LISTA_PARAMETROS coma FUNCION_PARAMETRO
  174                 | FUNCION_PARAMETRO

  175 DIMENSION_N: DIMENSION1
  176            | DIMENSION2
  177            | DIMENSION3

  178 TIPO_F: PRIMITIVO
  179       | arreglo PRIMITIVO DIMENSION_N
  180       | Id
  181       | voide

  182 PRIMITIVO: entero
  183          | doble
  184          | cadena
  185          | caracter
  186          | boolean

  187 LLAMADA: Id punto Id parA LISTA_VALORES parC final
  188        | Id punto Id parA parC final
  189        | Id parA LISTA_VALORES parC final
  190        | Id parA parC final
  191        | Id punto Id
  192        | Id punto Id igual E final
  193        | Id punto POR_ARREGLO igual E final
  194        | Id punto POR_ARREGLO

  195 LISTA_VALORES: LISTA_VALORES coma E
  196              | E

  197 PRINCIPAL: principal parA parC CUERPO_MF


Terminals, with rules where they appear

$end (0) 0
error (256)
str (258) 56 113
cha (259) 55
cadena (260) 184
entero (261) 182
decimal (262) 57
numero (263) 58
caracter (264) 185
boolean (265) 186
doble (266) 183
Id (267) 7 10 11 27 28 31 50 63 64 85 86 87 98 99 120 121 122 123 124
    132 133 134 135 136 137 138 161 163 164 165 166 168 169 170 180
    187 188 189 190 191 192 193 194
comparar (268) 41
diferencia (269) 42
menorQ (270) 43
menorIgual (271) 44
mayorQ (272) 45
mayorIgual (273) 46
Or (274) 37
And (275) 38
Nand (276) 39
Nor (277) 40
Not (278) 53
notificar (279)
caso (280) 111 112
suma (281) 32 98
resta (282) 33 59 99
multiplicacion (283) 34
division (284) 35
potencia (285) 36
parA (286) 60 63 89 94 95 97 103 104 105 106 113 114 120 121 122 123
    124 132 133 134 135 136 137 138 161 171 172 187 188 189 190 197
parC (287) 60 63 89 94 95 97 103 104 105 106 113 114 120 121 122 123
    124 132 133 134 135 136 137 138 161 171 172 187 188 189 190 197
final (288) 29 30 31 63 64 72 73 77 78 81 82 88 97 105 110 111 112
    113 114 120 121 122 123 124 132 133 134 135 136 137 138 147 157
    159 160 161 187 188 189 190 192 193
llaveA (289) 8 9 74 78 82 83 84 89 94 95 96 102 103 104 105 106 167
llaveC (290) 7 74 78 82 83 84 90 91 92 93 94 95 96 102 103 104 105
    106 167
igual (291) 29 31 63 73 78 82 88 120 132 161 192 193
coma (292) 10 27 75 79 83 121 122 123 132 138 173 195
puntoComa (293)
arreglo (294) 65 169 179
corA (295) 69 70 71
corC (296) 69 70 71
si (297) 89
SinoSi (298) 94 95
sino (299) 96
comprobar (300) 106
salir (301) 110 111 112
defecto (302) 110
dosPunto (303) 110 111 112
para (304) 97
mientras (305) 104 105
repetir (306) 103
hacer (307) 105
romper (308) 159
continuar (309) 160
incluir (310) 113
imprimir (311) 114
archivo (312) 120
crearDer (313) 120
crearConjunto (314) 121
crearRegex (315) 122
crearEntrada (316) 123
guardarA (317) 124
cuenta (318) 132
crearC (319) 132
verCuenta (320) 133
depCuenta (321) 134
resCuenta (322) 135
imprimirCuenta (323) 136
conCuenta (324) 137
transferir (325) 138
clase (326) 7
extender (327) 8
principal (328) 197
sobrescribir (329) 163 165
funcion (330) 163 164 165 166
publico (331) 22
privado (332) 23
protegido (333) 24
voide (334) 181
Retornar (335) 162
falso (336) 62
verdadero (337) 61
punto (338) 121 122 123 124 133 134 135 136 137 187 188 191 192 193
    194
nuevo (339) 63 161
nonassoc (340)


Nonterminals, with rules where they appear

$accept (86)
    on left: 0
INICIO (87)
    on left: 1 2, on right: 0
LISTA_INCLU (88)
    on left: 3 4, on right: 1 3
CLASES (89)
    on left: 5 6, on right: 1 2 5
CLASE (90)
    on left: 7, on right: 5 6
EXTENDER (91)
    on left: 8 9, on right: 7
HERENCIA (92)
    on left: 10 11, on right: 8 10
LISTA_SENTENCIA (93)
    on left: 12 13, on right: 7 12
CUERPO_CLASE (94)
    on left: 14 15 16 17 18 19 20 21, on right: 12 13
VISIBILIDAD (95)
    on left: 22 23 24, on right: 16 18 20 163 164
VAR_GLOBALES (96)
    on left: 25, on right: 14 16 100 141
TIPO_DATO (97)
    on left: 26, on right: 25 65
DEC_ID (98)
    on left: 27 28, on right: 26 27
ASIGNACION (99)
    on left: 29 30, on right: 25
ASIGNAR_VAR (100)
    on left: 31, on right: 101 146
E (101)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
    50 51 52 53 54 55 56 57 58 59 60, on right: 29 31 32 33 34 35 36
    37 38 39 40 41 42 43 44 45 46 53 59 60 69 70 71 75 76 88 89 94
    95 97 103 104 105 106 111 112 114 120 121 122 123 132 134 135 138
    162 192 193 195 196
IN_BOOL (102)
    on left: 61 62, on right: 54
DECLARAR_OBJEC (103)
    on left: 63 64, on right: 17 18 142
DECLAR_ARREGLO (104)
    on left: 65, on right: 19 20 144
DIMENSION (105)
    on left: 66 67 68, on right: 65
DIMENSION1 (106)
    on left: 69, on right: 66 85 175
DIMENSION2 (107)
    on left: 70, on right: 67 86 176
DIMENSION3 (108)
    on left: 71, on right: 68 87 177
TERMI1 (109)
    on left: 72 73, on right: 66
ARRAY1 (110)
    on left: 74, on right: 73 79 80
LISTA_NORMAL (111)
    on left: 75 76, on right: 74 75
TERMI2 (112)
    on left: 77 78, on right: 67
LISTA2 (113)
    on left: 79 80, on right: 78 79 83 84
TERMI3 (114)
    on left: 81 82, on right: 68
LISTA3 (115)
    on left: 83 84, on right: 82 83
POR_ARREGLO (116)
    on left: 85 86 87, on right: 51 88 193 194
REASIGNAR_ARREGLO (117)
    on left: 88, on right: 145
START_SI (118)
    on left: 89, on right: 148
OTRO_SI (119)
    on left: 90 91 92 93, on right: 89
SINO_SI (120)
    on left: 94 95, on right: 90 91 94
SINO (121)
    on left: 96, on right: 91 92
START_PARA (122)
    on left: 97, on right: 151
ACTUALIZAR (123)
    on left: 98 99, on right: 97 147
INICIAR (124)
    on left: 100 101, on right: 97
CUERPO_PARA (125)
    on left: 102, on right: 97
START_REPETIR (126)
    on left: 103, on right: 152
START_MIENTRAS (127)
    on left: 104, on right: 150
START_HACER (128)
    on left: 105, on right: 149
START_COMPROBAR (129)
    on left: 106, on right: 153
CUERPO_COMPRO (130)
    on left: 107 108 109, on right: 106
DEFAU (131)
    on left: 110, on right: 107 109
LISTA_CASO (132)
    on left: 111 112, on right: 107 108 111
START_INCLUIR (133)
    on left: 113, on right: 3 4
START_IMPRIMIR (134)
    on left: 114, on right: 154
SENTENCIA_ARCHIVOS (135)
    on left: 115 116 117 118 119, on right: 155
ARCH (136)
    on left: 120, on right: 115
NUEVO_CONJUNTO (137)
    on left: 121, on right: 116
NUEVO_REGEX (138)
    on left: 122, on right: 117
NUEVA_ENTRADA (139)
    on left: 123, on right: 118
GUARDAR (140)
    on left: 124, on right: 119
SENTENCIA_CUENTA (141)
    on left: 125 126 127 128 129 130 131, on right: 156
CREAR_CUENTA (142)
    on left: 132, on right: 125
VERIFICAR_CUENTA (143)
    on left: 133, on right: 47 126
DEP_CUENTA (144)
    on left: 134, on right: 127
RESTA_CUENTA (145)
    on left: 135, on right: 128
IMPRI_CUENTA (146)
    on left: 136, on right: 48 129
CONSUL_CUENTA (147)
    on left: 137, on right: 49 130
TRANFERIR (148)
    on left: 138, on right: 131
LISTA_GENERAL (149)
    on left: 139 140, on right: 89 94 95 96 102 103 104 105 110 111
    112 139 167
SENTENCIA_GENERAL (150)
    on left: 141 142 143 144 145 146 147 148 149 150 151 152 153 154
    155 156 157 158 159 160, on right: 139 140
NUEVO_OBJEC (151)
    on left: 161, on right: 143
RETORNO (152)
    on left: 162, on right: 157
METODO_FUNCION (153)
    on left: 163 164 165 166, on right: 15
CUERPO_MF (154)
    on left: 167, on right: 163 164 165 166 197
FUNCION_PARAMETRO (155)
    on left: 168 169 170, on right: 173 174
PARAMETROS (156)
    on left: 171 172, on right: 163 164 165 166
LISTA_PARAMETROS (157)
    on left: 173 174, on right: 171 173
DIMENSION_N (158)
    on left: 175 176 177, on right: 169 179
TIPO_F (159)
    on left: 178 179 180 181, on right: 163 164 165 166
PRIMITIVO (160)
    on left: 182 183 184 185 186, on right: 26 168 169 178 179
LLAMADA (161)
    on left: 187 188 189 190 191 192 193 194, on right: 52 158
LISTA_VALORES (162)
    on left: 195 196, on right: 187 189 195
PRINCIPAL (163)
    on left: 197, on right: 21


State 0

    0 $accept: . INICIO $end

    incluir  shift, and go to state 1
    clase    shift, and go to state 2

    INICIO         go to state 3
    LISTA_INCLU    go to state 4
    CLASES         go to state 5
    CLASE          go to state 6
    START_INCLUIR  go to state 7


State 1

  113 START_INCLUIR: incluir . parA str parC final

    parA  shift, and go to state 8


State 2

    7 CLASE: clase . Id EXTENDER LISTA_SENTENCIA llaveC

    Id  shift, and go to state 9


State 3

    0 $accept: INICIO . $end

    $end  shift, and go to state 10


State 4

    1 INICIO: LISTA_INCLU . CLASES
    3 LISTA_INCLU: LISTA_INCLU . START_INCLUIR

    incluir  shift, and go to state 1
    clase    shift, and go to state 2

    CLASES         go to state 11
    CLASE          go to state 6
    START_INCLUIR  go to state 12


State 5

    2 INICIO: CLASES .
    5 CLASES: CLASES . CLASE

    clase  shift, and go to state 2

    $default  reduce using rule 2 (INICIO)

    CLASE  go to state 13


State 6

    6 CLASES: CLASE .

    $default  reduce using rule 6 (CLASES)


State 7

    4 LISTA_INCLU: START_INCLUIR .

    $default  reduce using rule 4 (LISTA_INCLU)


State 8

  113 START_INCLUIR: incluir parA . str parC final

    str  shift, and go to state 14


State 9

    7 CLASE: clase Id . EXTENDER LISTA_SENTENCIA llaveC

    llaveA    shift, and go to state 15
    extender  shift, and go to state 16

    EXTENDER  go to state 17


State 10

    0 $accept: INICIO $end .

    $default  accept


State 11

    1 INICIO: LISTA_INCLU CLASES .
    5 CLASES: CLASES . CLASE

    clase  shift, and go to state 2

    $default  reduce using rule 1 (INICIO)

    CLASE  go to state 13


State 12

    3 LISTA_INCLU: LISTA_INCLU START_INCLUIR .

    $default  reduce using rule 3 (LISTA_INCLU)


State 13

    5 CLASES: CLASES CLASE .

    $default  reduce using rule 5 (CLASES)


State 14

  113 START_INCLUIR: incluir parA str . parC final

    parC  shift, and go to state 18


State 15

    9 EXTENDER: llaveA .

    $default  reduce using rule 9 (EXTENDER)


State 16

    8 EXTENDER: extender . HERENCIA llaveA

    Id  shift, and go to state 19

    HERENCIA  go to state 20


State 17

    7 CLASE: clase Id EXTENDER . LISTA_SENTENCIA llaveC

    cadena     shift, and go to state 21
    entero     shift, and go to state 22
    caracter   shift, and go to state 23
    boolean    shift, and go to state 24
    doble      shift, and go to state 25
    Id         shift, and go to state 26
    arreglo    shift, and go to state 27
    principal  shift, and go to state 28
    funcion    shift, and go to state 29
    publico    shift, and go to state 30
    privado    shift, and go to state 31
    protegido  shift, and go to state 32

    LISTA_SENTENCIA  go to state 33
    CUERPO_CLASE     go to state 34
    VISIBILIDAD      go to state 35
    VAR_GLOBALES     go to state 36
    TIPO_DATO        go to state 37
    DECLARAR_OBJEC   go to state 38
    DECLAR_ARREGLO   go to state 39
    METODO_FUNCION   go to state 40
    PRIMITIVO        go to state 41
    PRINCIPAL        go to state 42


State 18

  113 START_INCLUIR: incluir parA str parC . final

    final  shift, and go to state 43


State 19

   11 HERENCIA: Id .

    $default  reduce using rule 11 (HERENCIA)


State 20

    8 EXTENDER: extender HERENCIA . llaveA
   10 HERENCIA: HERENCIA . coma Id

    llaveA  shift, and go to state 44
    coma    shift, and go to state 45


State 21

  184 PRIMITIVO: cadena .

    $default  reduce using rule 184 (PRIMITIVO)


State 22

  182 PRIMITIVO: entero .

    $default  reduce using rule 182 (PRIMITIVO)


State 23

  185 PRIMITIVO: caracter .

    $default  reduce using rule 185 (PRIMITIVO)


State 24

  186 PRIMITIVO: boolean .

    $default  reduce using rule 186 (PRIMITIVO)


State 25

  183 PRIMITIVO: doble .

    $default  reduce using rule 183 (PRIMITIVO)


State 26

   63 DECLARAR_OBJEC: Id . Id igual nuevo Id parA parC final
   64               | Id . Id final

    Id  shift, and go to state 46


State 27

   65 DECLAR_ARREGLO: arreglo . TIPO_DATO DIMENSION

    cadena    shift, and go to state 21
    entero    shift, and go to state 22
    caracter  shift, and go to state 23
    boolean   shift, and go to state 24
    doble     shift, and go to state 25

    TIPO_DATO  go to state 47
    PRIMITIVO  go to state 41


State 28

  197 PRINCIPAL: principal . parA parC CUERPO_MF

    parA  shift, and go to state 48


State 29

  163 METODO_FUNCION: funcion . sobrescribir VISIBILIDAD TIPO_F Id PARAMETROS CUERPO_MF
  164               | funcion . VISIBILIDAD TIPO_F Id PARAMETROS CUERPO_MF
  165               | funcion . sobrescribir TIPO_F Id PARAMETROS CUERPO_MF
  166               | funcion . TIPO_F Id PARAMETROS CUERPO_MF

    cadena        shift, and go to state 21
    entero        shift, and go to state 22
    caracter      shift, and go to state 23
    boolean       shift, and go to state 24
    doble         shift, and go to state 25
    Id            shift, and go to state 49
    arreglo       shift, and go to state 50
    sobrescribir  shift, and go to state 51
    publico       shift, and go to state 30
    privado       shift, and go to state 31
    protegido     shift, and go to state 32
    voide         shift, and go to state 52

    VISIBILIDAD  go to state 53
    TIPO_F       go to state 54
    PRIMITIVO    go to state 55


State 30

   22 VISIBILIDAD: publico .

    $default  reduce using rule 22 (VISIBILIDAD)


State 31

   23 VISIBILIDAD: privado .

    $default  reduce using rule 23 (VISIBILIDAD)


State 32

   24 VISIBILIDAD: protegido .

    $default  reduce using rule 24 (VISIBILIDAD)


State 33

    7 CLASE: clase Id EXTENDER LISTA_SENTENCIA . llaveC
   12 LISTA_SENTENCIA: LISTA_SENTENCIA . CUERPO_CLASE

    cadena     shift, and go to state 21
    entero     shift, and go to state 22
    caracter   shift, and go to state 23
    boolean    shift, and go to state 24
    doble      shift, and go to state 25
    Id         shift, and go to state 26
    llaveC     shift, and go to state 56
    arreglo    shift, and go to state 27
    principal  shift, and go to state 28
    funcion    shift, and go to state 29
    publico    shift, and go to state 30
    privado    shift, and go to state 31
    protegido  shift, and go to state 32

    CUERPO_CLASE    go to state 57
    VISIBILIDAD     go to state 35
    VAR_GLOBALES    go to state 36
    TIPO_DATO       go to state 37
    DECLARAR_OBJEC  go to state 38
    DECLAR_ARREGLO  go to state 39
    METODO_FUNCION  go to state 40
    PRIMITIVO       go to state 41
    PRINCIPAL       go to state 42


State 34

   13 LISTA_SENTENCIA: CUERPO_CLASE .

    $default  reduce using rule 13 (LISTA_SENTENCIA)


State 35

   16 CUERPO_CLASE: VISIBILIDAD . VAR_GLOBALES
   18             | VISIBILIDAD . DECLARAR_OBJEC
   20             | VISIBILIDAD . DECLAR_ARREGLO

    cadena    shift, and go to state 21
    entero    shift, and go to state 22
    caracter  shift, and go to state 23
    boolean   shift, and go to state 24
    doble     shift, and go to state 25
    Id        shift, and go to state 26
    arreglo   shift, and go to state 27

    VAR_GLOBALES    go to state 58
    TIPO_DATO       go to state 37
    DECLARAR_OBJEC  go to state 59
    DECLAR_ARREGLO  go to state 60
    PRIMITIVO       go to state 41


State 36

   14 CUERPO_CLASE: VAR_GLOBALES .

    $default  reduce using rule 14 (CUERPO_CLASE)


State 37

   25 VAR_GLOBALES: TIPO_DATO . ASIGNACION

    final  shift, and go to state 61
    igual  shift, and go to state 62

    ASIGNACION  go to state 63


State 38

   17 CUERPO_CLASE: DECLARAR_OBJEC .

    $default  reduce using rule 17 (CUERPO_CLASE)


State 39

   19 CUERPO_CLASE: DECLAR_ARREGLO .

    $default  reduce using rule 19 (CUERPO_CLASE)


State 40

   15 CUERPO_CLASE: METODO_FUNCION .

    $default  reduce using rule 15 (CUERPO_CLASE)


State 41

   26 TIPO_DATO: PRIMITIVO . DEC_ID

    Id  shift, and go to state 64

    DEC_ID  go to state 65


State 42

   21 CUERPO_CLASE: PRINCIPAL .

    $default  reduce using rule 21 (CUERPO_CLASE)


State 43

  113 START_INCLUIR: incluir parA str parC final .

    $default  reduce using rule 113 (START_INCLUIR)


State 44

    8 EXTENDER: extender HERENCIA llaveA .

    $default  reduce using rule 8 (EXTENDER)


State 45

   10 HERENCIA: HERENCIA coma . Id

    Id  shift, and go to state 66


State 46

   63 DECLARAR_OBJEC: Id Id . igual nuevo Id parA parC final
   64               | Id Id . final

    final  shift, and go to state 67
    igual  shift, and go to state 68


State 47

   65 DECLAR_ARREGLO: arreglo TIPO_DATO . DIMENSION

    corA  shift, and go to state 69

    DIMENSION   go to state 70
    DIMENSION1  go to state 71
    DIMENSION2  go to state 72
    DIMENSION3  go to state 73


State 48

  197 PRINCIPAL: principal parA . parC CUERPO_MF

    parC  shift, and go to state 74


State 49

  180 TIPO_F: Id .

    $default  reduce using rule 180 (TIPO_F)


State 50

  179 TIPO_F: arreglo . PRIMITIVO DIMENSION_N

    cadena    shift, and go to state 21
    entero    shift, and go to state 22
    caracter  shift, and go to state 23
    boolean   shift, and go to state 24
    doble     shift, and go to state 25

    PRIMITIVO  go to state 75


State 51

  163 METODO_FUNCION: funcion sobrescribir . VISIBILIDAD TIPO_F Id PARAMETROS CUERPO_MF
  165               | funcion sobrescribir . TIPO_F Id PARAMETROS CUERPO_MF

    cadena     shift, and go to state 21
    entero     shift, and go to state 22
    caracter   shift, and go to state 23
    boolean    shift, and go to state 24
    doble      shift, and go to state 25
    Id         shift, and go to state 49
    arreglo    shift, and go to state 50
    publico    shift, and go to state 30
    privado    shift, and go to state 31
    protegido  shift, and go to state 32
    voide      shift, and go to state 52

    VISIBILIDAD  go to state 76
    TIPO_F       go to state 77
    PRIMITIVO    go to state 55


State 52

  181 TIPO_F: voide .

    $default  reduce using rule 181 (TIPO_F)


State 53

  164 METODO_FUNCION: funcion VISIBILIDAD . TIPO_F Id PARAMETROS CUERPO_MF

    cadena    shift, and go to state 21
    entero    shift, and go to state 22
    caracter  shift, and go to state 23
    boolean   shift, and go to state 24
    doble     shift, and go to state 25
    Id        shift, and go to state 49
    arreglo   shift, and go to state 50
    voide     shift, and go to state 52

    TIPO_F     go to state 78
    PRIMITIVO  go to state 55


State 54

  166 METODO_FUNCION: funcion TIPO_F . Id PARAMETROS CUERPO_MF

    Id  shift, and go to state 79


State 55

  178 TIPO_F: PRIMITIVO .

    $default  reduce using rule 178 (TIPO_F)


State 56

    7 CLASE: clase Id EXTENDER LISTA_SENTENCIA llaveC .

    $default  reduce using rule 7 (CLASE)


State 57

   12 LISTA_SENTENCIA: LISTA_SENTENCIA CUERPO_CLASE .

    $default  reduce using rule 12 (LISTA_SENTENCIA)


State 58

   16 CUERPO_CLASE: VISIBILIDAD VAR_GLOBALES .

    $default  reduce using rule 16 (CUERPO_CLASE)


State 59

   18 CUERPO_CLASE: VISIBILIDAD DECLARAR_OBJEC .

    $default  reduce using rule 18 (CUERPO_CLASE)


State 60

   20 CUERPO_CLASE: VISIBILIDAD DECLAR_ARREGLO .

    $default  reduce using rule 20 (CUERPO_CLASE)


State 61

   30 ASIGNACION: final .

    $default  reduce using rule 30 (ASIGNACION)


State 62

   29 ASIGNACION: igual . E final

    str        shift, and go to state 80
    cha        shift, and go to state 81
    decimal    shift, and go to state 82
    numero     shift, and go to state 83
    Id         shift, and go to state 84
    Not        shift, and go to state 85
    resta      shift, and go to state 86
    parA       shift, and go to state 87
    falso      shift, and go to state 88
    verdadero  shift, and go to state 89

    E                 go to state 90
    IN_BOOL           go to state 91
    POR_ARREGLO       go to state 92
    VERIFICAR_CUENTA  go to state 93
    IMPRI_CUENTA      go to state 94
    CONSUL_CUENTA     go to state 95
    LLAMADA           go to state 96


State 63

   25 VAR_GLOBALES: TIPO_DATO ASIGNACION .

    $default  reduce using rule 25 (VAR_GLOBALES)


State 64

   28 DEC_ID: Id .

    $default  reduce using rule 28 (DEC_ID)


State 65

   26 TIPO_DATO: PRIMITIVO DEC_ID .
   27 DEC_ID: DEC_ID . coma Id

    coma  shift, and go to state 97

    $default  reduce using rule 26 (TIPO_DATO)


State 66

   10 HERENCIA: HERENCIA coma Id .

    $default  reduce using rule 10 (HERENCIA)


State 67

   64 DECLARAR_OBJEC: Id Id final .

    $default  reduce using rule 64 (DECLARAR_OBJEC)


State 68

   63 DECLARAR_OBJEC: Id Id igual . nuevo Id parA parC final

    nuevo  shift, and go to state 98


State 69

   69 DIMENSION1: corA . E corC
   70 DIMENSION2: corA . E corC corA E corC
   71 DIMENSION3: corA . E corC corA E corC corA E corC

    str        shift, and go to state 80
    cha        shift, and go to state 81
    decimal    shift, and go to state 82
    numero     shift, and go to state 83
    Id         shift, and go to state 84
    Not        shift, and go to state 85
    resta      shift, and go to state 86
    parA       shift, and go to state 87
    falso      shift, and go to state 88
    verdadero  shift, and go to state 89

    E                 go to state 99
    IN_BOOL           go to state 91
    POR_ARREGLO       go to state 92
    VERIFICAR_CUENTA  go to state 93
    IMPRI_CUENTA      go to state 94
    CONSUL_CUENTA     go to state 95
    LLAMADA           go to state 96


State 70

   65 DECLAR_ARREGLO: arreglo TIPO_DATO DIMENSION .

    $default  reduce using rule 65 (DECLAR_ARREGLO)


State 71

   66 DIMENSION: DIMENSION1 . TERMI1

    final  shift, and go to state 100
    igual  shift, and go to state 101

    TERMI1  go to state 102


State 72

   67 DIMENSION: DIMENSION2 . TERMI2

    final  shift, and go to state 103
    igual  shift, and go to state 104

    TERMI2  go to state 105


State 73

   68 DIMENSION: DIMENSION3 . TERMI3

    final  shift, and go to state 106
    igual  shift, and go to state 107

    TERMI3  go to state 108


State 74

  197 PRINCIPAL: principal parA parC . CUERPO_MF

    llaveA  shift, and go to state 109

    CUERPO_MF  go to state 110


State 75

  179 TIPO_F: arreglo PRIMITIVO . DIMENSION_N

    corA  shift, and go to state 69

    DIMENSION1   go to state 111
    DIMENSION2   go to state 112
    DIMENSION3   go to state 113
    DIMENSION_N  go to state 114


State 76

  163 METODO_FUNCION: funcion sobrescribir VISIBILIDAD . TIPO_F Id PARAMETROS CUERPO_MF

    cadena    shift, and go to state 21
    entero    shift, and go to state 22
    caracter  shift, and go to state 23
    boolean   shift, and go to state 24
    doble     shift, and go to state 25
    Id        shift, and go to state 49
    arreglo   shift, and go to state 50
    voide     shift, and go to state 52

    TIPO_F     go to state 115
    PRIMITIVO  go to state 55


State 77

  165 METODO_FUNCION: funcion sobrescribir TIPO_F . Id PARAMETROS CUERPO_MF

    Id  shift, and go to state 116


State 78

  164 METODO_FUNCION: funcion VISIBILIDAD TIPO_F . Id PARAMETROS CUERPO_MF
